se modifican hojas js y hoja venta html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Desafío - Inmobiliaria</title>
+    <title>Desafío 4 - Inmobiliaria</title>
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/estilos.css" />
     <!-- Bootstrap CDN -->
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="#">Inmobiliaria ADL</a>
+        <a class="navbar-brand" href="#">Inmobiliaria P2P</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,10 +35,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#">En venta</a>
+              <a class="nav-link" href="./assets/html/propiedades_venta.html">En venta</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Alquiler</a>
+              <a class="nav-link" href="./assets/html/propiedades_arriendo.html">En arriendo</a>
             </li>
           </ul>
         </div>
@@ -150,14 +150,14 @@
             </div>
           </div>
         </div>
-        <a href="#" class="btn btn-dark"
+        <a href="./assets/html/propiedades_venta.html" class="btn btn-dark"
           >Ver todas las propiedades en venta</a
         >
       </section>
       <hr />
       <!-- Propiedades en alquiler -->
       <section id="alquiler" class="mb-5">
-        <h2>Propiedades en alquiler</h2>
+        <h2>Propiedades en arriendo</h2>
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card">
@@ -258,8 +258,8 @@
             </div>
           </div>
         </div>
-        <a href="#" class="btn btn-dark"
-          >Ver todas las propiedades en alquiler</a
+        <a href="./assets/html/propiedades_arriendo.html" class="btn btn-dark"
+          >Ver todas las propiedades en arriendo</a
         >
       </section>
     </div>
