se modifican todas las hojas

--- a/assets/html/propiedades_arriendo.html
+++ b/assets/html/propiedades_arriendo.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Inmobiliaria P2P</a>
+            <a class="navbar-brand" href="../../index.html">Inmobiliaria P2P</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,12 +24,12 @@
             </div>
         </div>
     </nav>
-    <main class="container-fluid main-section" id="arriendo">
+    <main class="container-fluid main-section" id="pagarriendo">
       <h1 class="text-white" id="colorfondo">Un nuevo comienzo</h1>
     </main>
     <div class="container mt-5">
         <section id="alquiler">
-            <h2>Propiedades en alquiler</h2>
+            <h2>Propiedades en arriendo</h2>
             <div class="row" id="alquiler-list"></div>
         </section>
     </div>
