--- a/assets/html/propiedades_venta.html
+++ b/assets/html/propiedades_venta.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Inmobiliaria P2P</a>
+            <a class="navbar-brand" href="../../index.html">Inmobiliaria P2P</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,7 +23,7 @@
             </div>
         </div>
     </nav>
-    <main class="container-fluid main-section" id="ventaa">
+    <main class="container-fluid main-section" id="pagventa">
         <h1 class="text-white" id="colorfondo">La casa O departamento de tus sueños</h1>
       </main>
     <div class="container mt-5">
