se modifican todas las hojas para entrega desafio

--- a/assets/html/propiedades_arriendo.html
+++ b/assets/html/propiedades_arriendo.html
@@ -25,12 +25,12 @@
         </div>
     </nav>
     <main class="container-fluid main-section" id="pagarriendo">
-      <h1 class="text-white" id="colorfondo">Un nuevo comienzo</h1>
+      <h1 class="text-white" id="colorfondo">el inicio de nuevas oportunidades</h1>
     </main>
     <div class="container mt-5">
         <section id="alquiler">
             <h2>Propiedades en arriendo</h2>
-            <div class="row" id="alquiler-list"></div>
+            <div class="row" id="arriendo-list"></div>
         </section>
     </div>
     <!-- Font awesome -->
