--- a/assets/html/propiedades_venta.html
+++ b/assets/html/propiedades_venta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Propiedades Arriendo</title>
+    <title>Propiedades Venta</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
         </div>
     </nav>
     <main class="container-fluid main-section" id="pagventa">
-        <h1 class="text-white" id="colorfondo">La casa O departamento de tus sueños</h1>
+        <h1 class="text-white" id="colorfondo">La casa o departamento de tus sueños</h1>
       </main>
     <div class="container mt-5">
         <section id="venta">
